# stripe-agent-toolkit

./: README.md  package-lock.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: main.yml  release.yml
evals/: .env.example  README.md  cases.ts  eval.ts  openai.ts  package.json  pnpm-lock.yaml  scorer.ts  test.ts  tsconfig.json  tutorial.eval.ts
modelcontextprotocol/: README.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml
modelcontextprotocol/scripts/: publish
modelcontextprotocol/src/: index.ts
python/: .flake8  Makefile  README.md  pyproject.toml  requirements.txt
python/examples/crewai/: .env.template  README.md  main.py
python/examples/langchain/: .env.template  README.md  main.py
python/examples/openai/: main.py
python/examples/openai/customer_support/: .env.template  README.md  emailer.py  env.py  main.py  pyproject.toml  repl.py  support_agent.py
python/examples/openai/file_search/: README.md  main.py
python/examples/openai/web_search/: .env.template  README.md  main.py
python/stripe_agent_toolkit/: api.py  configuration.py  functions.py  prompts.py  schema.py  tools.py
python/stripe_agent_toolkit/crewai/: tool.py  toolkit.py
python/stripe_agent_toolkit/langchain/: tool.py  toolkit.py
python/stripe_agent_toolkit/openai/: hooks.py  tool.py  toolkit.py
python/tests/: test_configuration.py  test_functions.py
typescript/: README.md  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
typescript/ai-sdk/: index.d.mts  index.js  index.js.map  index.mjs  index.mjs.map
(+112 files in other folders)
